<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/w1"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/chatspot_icon"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/black"
            android:textColorHint="@color/chatbackground"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/black"
            android:textColorHint="@color/chatbackground"/>

        <TextView
            android:id="@+id/txtDoNotHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:text="@string/donothaveaccount"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="5dp"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/si_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/design_default_color_secondary_variant"
            app:cornerRadius="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_google"
                android:padding="15dp"
                android:text="@string/google"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:cornerRadius="10dp"/>

            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_facebook"
                android:padding="15dp"
                android:text="@string/facebook"
                android:textColor="@color/black"
                app:backgroundTint="@color/fb_color"
                app:cornerRadius="10dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtSignUpPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/signinphone"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>